# wynnbuilder-beta.github.io

./: AGENTS.md  CLAUDE.md
wynnBuildGenerator/: api.py  app.js  index.html  pyproject.toml  styles.css
wynnBuildGenerator/docs/: ARCHITECTURE.md  NEXT_STEPS.md  OLD_IMPLEMENTATION_NOTES.md  REQUIREMENTS.md
wynnBuildGenerator/docs/search_fixtures/: .gitignore  BENCHMARK_NOTES.md  condition_accuracy_hp_ge_20000.json  condition_accuracy_multi_and.json  edge_case_low_level.json  edge_case_no_scoring.json  edge_case_same_ring_both_slots.json  edge_case_tight_condition_zero_results.json  false_negative_fixed_helmet.json  false_negative_known_build.json  score_monotonicity_warrior.json  score_order_warrior.json  zero_guard_all_classes_lv106.json  zero_guard_warrior_lv106.json
wynnBuildGenerator/python/search/: __init__.py  beam_search.py  benchmarks.py  crafted_candidates.py  final_evaluator.py  item_index.py  lanes.py  numpy_evaluator.py  scoring.py
wynnBuildGenerator/python/tests/: test_scoring.py  test_search_fixtures.py
wynnBuildGenerator/wynn_builder_compat/: README.md
wynnBuildGenerator/wynn_builder_compat/docs/: FORMULA_MAP.md  MAINTENANCE_PROMPT.md  PARITY_TESTING.md  PORTING_STRATEGY.md
wynnBuildGenerator/wynn_builder_compat/tests/: test_build_utils.py  test_data.py  test_display_keys.py  test_js_build_parity.py  test_js_build_utils_parity.py  test_js_craft_effectiveness_parity.py  test_js_craft_preview_parity.py  test_js_encoding_parity.py  test_js_skillpoints_parity.py  test_skillpoints_partial.py
(+17 files in other folders)
