[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wynn-build-generator"
version = "0.1.0"
description = "Python compatibility and search engine for Wynnbuilder"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
]
api = [
  "fastapi>=0.100",
  "uvicorn[standard]>=0.20",
  "numpy>=1.24",
]

[tool.pytest.ini_options]
pythonpath = ["wynn_builder_compat/src", "python"]
testpaths = ["wynn_builder_compat/tests", "python/tests"]

[tool.setuptools.packages.find]
where = ["wynn_builder_compat/src", "python"]
